[gd_scene load_steps=4 format=3 uid="uid://cmsx5bhk87xl2"]

[ext_resource type="Theme" uid="uid://bgm5d4bmm73bi" path="res://assets/game_Theme.tres" id="1_7y31d"]
[ext_resource type="Script" uid="uid://cyvokri8d4do5" path="res://scripts/exporter.gd" id="2_y0bob"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_el1hm"]
size = Vector2(262, 229)

[node name="Exporter" type="PanelContainer"]
custom_minimum_size = Vector2(200, 200)
offset_right = 278.0
offset_bottom = 244.0
size_flags_horizontal = 0
theme = ExtResource("1_7y31d")
script = ExtResource("2_y0bob")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FirstFragment" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SecondFragment" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ExportButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Export"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(139, 121.5)
shape = SubResource("RectangleShape2D_el1hm")

[connection signal="pressed" from="MarginContainer/VBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
